--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,32 +24,60 @@ body{
     background-color: var(--backgroundColor);
     color: var(--fontColor);
     flex-direction: column;
-    padding: 1rem;
+    padding: 0.2rem;
+    background: linear-gradient(270deg, darkblue, var(--backgroundColor), var(--border));
+    animation: colour 12s ease infinite;
+    background-size: 600%, 600%;
 }
 
-.inputs{
-    background-color: var(--divColor);
-    color: var(---fontColor2);
+.inputs{ 
     padding: 2rem;
-    border: 1px solid var(--border);
-    border-radius: 20px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    filter: drop-shadow(0px 2px 4px #00bfff54);
     max-width: 100vw;
     max-height: 95dvh;
     overflow: hidden;
     overflow-y: scroll;
+    gap: 3rem;
+    
+}
+
+@keyframes colour {
+    0%{background-position: 0%, 50%;}
+    50%{background-position: 100%, 100%;}
+    100%{background-position: 50%, 0%;}
 }
 
 .inputs::-webkit-scrollbar{
     display: none;
 }
 
+.subContainer{
+    border: 1px solid var(--border);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 2rem;
+    background-color: var(--divColor);
+    color: var(---fontColor2);
+    opacity: 0;
+}
+
+.subContaineranimate {
+    animation: subcontain 1.5s ease forwards;
+    opacity: 1;
+}
+
+@keyframes subcontain {
+    0%{opacity: 0; transform: translateY(100px);}
+    100%{opacity: 1; transform: translateY(0);}
+}
+
 .pageslide{
     opacity: 0;
 }
+
 .animatepageslide{
     animation: animatehome 0.5s ease-in forwards 0.5s;
 }
@@ -62,7 +90,7 @@ body{
 h1 {
     font-size: 5rem;
     margin: 0;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     text-align: center;
 }
 
@@ -76,9 +104,10 @@ label {
 
 input {
     background-color: var(--divColor);
-    color: var(---fontColor2);
-    border: 1px solid var(--fontColor);
-    border-radius: 50px;
+    color: var(--fontColor);
+    border: 0;
+    border-bottom: 1px solid var(--fontColor);
+    border-radius: 5px;
     padding-left: 1rem;
     width: 70vw;
     transition: 0.3s ease;
@@ -106,7 +135,7 @@ input:focus {
 .add {
     font-size: 2rem;
     padding: 0.5rem 1rem;
-    background-color: var(--backgroundColor);
+    background-color: transparent;
     border-radius: 40%;
     align-self: center;
     border: 0;
@@ -117,14 +146,14 @@ input:focus {
 }
 
 .add:hover{
-    background-color: #2c2f33;
-    transform: scale(0.85);
-    color: var(--backgroundColor);
+    transform: scale(0.7);
+    color: var(--buttonColor);
 }
 
 .lastbtn{
     padding: 1rem;
     border-radius: 20px;
+    background-color: #1a1c20;
 }
 
 #subjects, #scores{
@@ -141,7 +170,6 @@ input:focus {
     box-shadow: 0px 0px 4px rgba(0, 191, 255, 0.2);
     border-radius: 20px;
     padding: 1.5rem;
-    margin-top: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -162,6 +190,38 @@ input:focus {
 
 .tableData{
     border: 1px solid #0e0e10;
+}
+
+.tableUi{
+    background: transparent;
+    backdrop-filter: blur(40px);
+    width: 70dvw;
+    height: 70dvh;
+    max-height: 100dvh;
+    /* border: 1px solid var(---fontColor2); */
+    border-radius: 10px;
+    /* display: flex; */
+    flex-wrap: nowrap;
+}
+
+.tableUi th{
+    height: fit-content;
+    border: 1px solid var(---fontColor2); 
+    width: 100%;
+    justify-content: center;
+    display: flex;  
+}
+
+.tableUi tr{
+    display: flex;
+
+    height: 5%;
+}
+
+.tableUi td{
+    padding: 1rem;
+    width: 100%;
+    border: 1px solid var(---fontColor2);
 }
 
 .opacityOfbtn{
@@ -347,6 +407,7 @@ input:focus {
         margin-left: 1rem;
         margin-right: 1rem;
         padding: 2rem 0.5rem;
+        gap: 1rem;
         width: fit-content;
         height: 95dvh;
     }
@@ -361,12 +422,21 @@ input:focus {
         height: fit-content;
     }
 
+    .subContainer{
+        padding: 1rem;
+    }
+
     .add{
         font-size: 1rem;
     }
 
+    .tableUi{
+        width: 80vw;
+    }
+
     .scoreSubject{
         flex-direction: column;
+        gap: 1rem;
     }
 
     #subjects, #scores{
