--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ body{
     color: var(--fontColor);
     flex-direction: column;
     padding: 0.2rem;
-    background: linear-gradient(270deg, darkblue, var(--backgroundColor), var(--border));
+    background: linear-gradient(90deg, rgb(0, 0, 44), rgb(17, 17, 133), var(--border));
     animation: colour 12s ease infinite;
     background-size: 600%, 600%;
 }
@@ -273,6 +273,7 @@ input:focus {
 .inputeditsubject{
     display: flex;
     justify-content: space-between;
+    gap: 1rem;
 }
 
 .inputeditsubject input{
@@ -280,8 +281,8 @@ input:focus {
 }
 
 .inputeditsubject button{
-    border-radius: 5px;
-    padding: 0.5rem;
+    border-radius: 10px;
+    padding: 0.2rem;
     background-color: var(---fontColor2);
 }
 
